ajuste no index

--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@
           />
         </a>
         <div id="company">
-          <h1>Monte o seu <span>Oburger</span></h1>
-          <span>O melhor burger da cidade!</span>
+          <h1>tahChegando <span>App</span></h1>
+          <span>O melhor app de Delivery!</span>
         </div>
       </header>
 
