--- a/public/categories.html
+++ b/public/categories.html
@@ -41,12 +41,12 @@
 
   <main>
     <ul id="form-tabs">
-      <li class="active">Organizar</li>
+      <li class="active">Categorias</li>
       <li><a href="products.html">Voltar</a></li>
     </ul>
     <form class="second" id="form-categories">
-      <h3>Suas Categorias</h3>
-      
+      <h3>Organize suas Categorias</h3>
+      <span>Mova as categorias para a ordem que deseja e então clique em salvar.</span>
       <ul class="sorteable-ul">
         <p>Carregando Categorias...</p>
       </ul>
